--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,3 +1,49 @@
 .home {
 	position: absolute;
+	z-index: 1;
+	top: 25%;
+	left: 50%;
+	transform: translateX(-50%);
+	h2 {
+		font-size: 4rem;
+		text-align: center;
+		margin-bottom: 7px;
+	}
+	button {
+		display: block;
+		margin: 0 auto;
+		font-size: 2rem;
+		padding: 17px;
+		background: transparent;
+		color: white;
+		border: 2px solid white;
+		cursor: pointer;
+		transition: all 0.5s;
+		&:hover {
+			border-radius: 20px;
+			color: yellow;
+			border-color: yellow;
+		}
+	}
+}
+
+#arrow-indicator {
+	position: relative;
+	text-align: center;
+	display: block;
+	margin: 0 auto;
+	font-size: 3rem;
+	animation: indicator-animation 1.7s infinite;
+}
+
+@keyframes indicator-animation {
+	0% {
+		top: 0;
+	}
+	50% {
+		top: 20px;
+	}
+	100% {
+		top: 0;
+	}
 }
