--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -17,12 +17,14 @@
 		background: transparent;
 		color: white;
 		border: 2px solid white;
+		border-radius: 10px;
 		cursor: pointer;
 		transition: all 0.5s;
 		&:hover {
 			border-radius: 20px;
-			color: yellow;
+			color: black;
 			border-color: yellow;
+			background: yellow;
 		}
 	}
 }
