--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,10 @@
 }
 body {
 	color: white;
-	background: black;
+	height: 100vh;
+	background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+		url("./assets/bg.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
