--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -16,6 +16,7 @@
 		padding: 17px;
 		background: transparent;
 		color: white;
+		box-shadow: 0px 0px 5px black;
 		border: 2px solid white;
 		border-radius: 10px;
 		cursor: pointer;
@@ -25,6 +26,7 @@
 			color: black;
 			border-color: yellow;
 			background: yellow;
+			text-shadow: none;
 		}
 	}
 }
