Update menu component & style

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,4 +11,5 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	text-shadow: 5px 5px 7px black;
 }
