--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -9,22 +9,22 @@
 		text-align: center;
 		margin-bottom: 7px;
 	}
-	button {
+	a {
 		display: block;
+		width: 170px;
 		margin: 0 auto;
+		padding: 10px 0;
+		text-align: center;
+		background: red;
+		color: yellow;
 		font-size: 2rem;
-		padding: 17px;
-		background: transparent;
-		color: white;
-		box-shadow: 0px 0px 5px black;
-		border: 2px solid white;
+		background: none;
+		border: 2px solid yellow;
 		border-radius: 10px;
-		cursor: pointer;
-		transition: all 0.5s;
+		text-decoration: none;
+		transition: all 0.4s;
 		&:hover {
-			border-radius: 20px;
 			color: black;
-			border-color: yellow;
 			background: yellow;
 			text-shadow: none;
 		}
