--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@ body {
 	color: white;
 	height: 100vh;
 	background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-		url("./assets/bg.jpg");
+		url("./images/bg.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
